--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "install": "^0.13.0",
+    "npm": "^6.13.4",
     "p5": "^0.10.2",
+    "p5.serialserver": "0.0.29",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-p5-wrapper": "^2.0.0",
